--- a/server/src/server/static/index.html
+++ b/server/src/server/static/index.html
@@ -124,7 +124,8 @@
             try {
 
                 // handle output -> speaker stuff
-                const ws = new WebSocket("ws://localhost:3000/ws");
+                // const ws = new WebSocket("ws://localhost:3000/ws");
+                const ws = new WebSocket("wss://aiortc.knowbox.cn/ws");
 
                 const audioPlayer = new Player();
                 audioPlayer.init(24000);
